# automotive_results_v0.5

./: 404.html  README.md  index.html  run.sh
.github/: CODEOWNERS
.github/workflows/: publish.yml
CONTRIBUTING/: index.html
LICENSE/: index.html
closed/NVIDIA/: Makefile  Makefile.build  Makefile.const  Makefile.data  Makefile.docker  Makefile.submission  README.md
closed/NVIDIA/code/: README.md  __init__.py  main.py
closed/NVIDIA/code/actionhandler/: __init__.py  calibrate.py  generate_conf_files.py  generate_engines.py  run_audit.py  run_harness.py
closed/NVIDIA/code/bevformer/tensorrt/: README.md  bevformer_graphsurgeon.py  builder.py  calibrator.py  constants.py  download_data.sh  download_model.sh  harness.py  infer.py  libbev_plugins.so.sha  preprocess_data.py  timing.cache.bz2.sha
closed/NVIDIA/code/common/: __init__.py  accuracy.py  accuracy_checker.py  arguments.py  auditing.py  constants.py  fields.py  file_downloads.sh  fix_sys_path.py  harness.py  log_parser.py  lwis_harness.py  lwis_ops.py  nvpmodel_soc.py  power_limit.py  submission.py  utils.py
closed/NVIDIA/code/common/systems/: known_hardware.py  system_list.py
closed/NVIDIA/code/harness/: CMakeLists.txt
closed/NVIDIA/code/harness/common/: harness_flags.hpp
closed/NVIDIA/code/harness/harness_bevformer/: lwis_bevformer.cpp  lwis_bevformer.hpp  lwis_bevformer_buffers.h  lwis_bevformer_ops.py  lwis_bevformer_pybind.cc  main_bevformer.cc  qsl_bevformer.hpp  setup.py
closed/NVIDIA/code/harness/harness_default/: lwis_pybind.cc  main_default.cc  setup.py
closed/NVIDIA/code/harness/lwis/include/: numpy.hpp  qsl.hpp
closed/NVIDIA/code/harness/lwis/src/: lwis.cpp
closed/NVIDIA/code/plugin/: plugin_map.py
closed/NVIDIA/configs/: configuration.py
closed/NVIDIA/configs/bevformer/: __init__.py
closed/NVIDIA/configs/bevformer/ConstantStream/: __init__.py
closed/NVIDIA/configs/bevformer/SingleStream/: __init__.py
closed/NVIDIA/data_maps/: README.md
closed/NVIDIA/data_maps/nuscenes/: cal_file_map.txt  cal_map.txt  val_file_map.txt  val_map.txt
closed/NVIDIA/docker/: Pipfile  pyproject.toml
closed/NVIDIA/docker/calibration/: Dockerfile
closed/NVIDIA/docker/common/: install_apt_deps.sh  install_misc_deps.sh  install_pip_deps.sh  requirements.aarch64-SoC.txt
closed/NVIDIA/docker/common/mlpauto-mitten/: Makefile  README.md
closed/NVIDIA/docker/common/mlpauto-mitten/docker/: Dockerfile.L4T  Dockerfile.aarch64  Dockerfile.x86_64
closed/NVIDIA/docker/common/mlpauto-mitten/src/nvmitten/: constants.py  json_utils.py
closed/NVIDIA/docker/common/mlpauto-mitten/src/nvmitten/configurator/: __init__.py  configurable.py  fields.py
closed/NVIDIA/docker/common/mlpauto-mitten/src/nvmitten/debug/: __init__.py
closed/NVIDIA/docker/common/mlpauto-mitten/src/nvmitten/mlcommons/automotive/: __init__.py  constants.py  datasets.py  ops.py  repo.py
closed/NVIDIA/docker/common/mlpauto-mitten/src/nvmitten/nvidia/: accelerator.py  builder.py  constants.py  cupy.py  preprocessing.py  runner.py
closed/NVIDIA/docker/common/mlpauto-mitten/src/nvmitten/system/: accelerator.py  component.py  cpu.py  memory.py  system.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/: __init__.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/assets/configurator/: config.py  my_fields.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/assets/scoped_imports/: my_fake_module.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/assets/scoped_imports/nested/: nested_module.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/configurator/: test_configurable.py  test_fields.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/nvidia/: test_accelerator.py
closed/NVIDIA/docker/common/mlpauto-mitten/tests/system/: test_component.py  test_cpu.py  test_memory.py
closed/NVIDIA/docker/dev/: Dockerfile  install_tensorrt.sh
closed/NVIDIA/docker/release/: Dockerfile
closed/NVIDIA/documentation/: FAQ.md  calibration.md  commands.md  performance_tuning_guide.md  submission_guide.md
closed/NVIDIA/results/: submission_checker_log.txt
closed/NVIDIA/results/Thor-X_TRT/: README.md  summary.html
closed/NVIDIA/scripts/: check_intranet.sh  create_poetry_lock.py  generate_system_descriptions.py  get_system_id.py  set_clocks.sh
closed/NVIDIA/scripts/custom_systems/: add_custom_system.py
closed/NVIDIA/scripts/update_results/: __main__.py  stage.py  utils.py
closed/NVIDIA/systems/: Thor-X_TRT.json  system_descriptions.tsv
compare/: index.html
javascripts/: summary_results.json
open/GATEOverflow/code/bevformer/: README.md
open/GATEOverflow/code/deeplabv3plus/: README.md
open/GATEOverflow/code/ssd/: README.md
open/GATEOverflow/measurements/intel_spr_32c-reference-cpu-onnxruntime-default_config/: README.md
open/GATEOverflow/measurements/intel_spr_32c-reference-cpu-pytorch-default_config/: README.md
open/GATEOverflow/measurements/intel_spr_32c-reference-gpu-pytorch-cu126/: README.md
open/GATEOverflow/measurements/intel_spr_i9-reference-cpu-onnxruntime-default_config/: README.md
open/GATEOverflow/measurements/intel_spr_i9-reference-cpu-pytorch-default_config/: README.md
open/GATEOverflow/results/intel_spr_32c-reference-cpu-onnxruntime-default_config/: README.md  summary.html
open/GATEOverflow/results/intel_spr_32c-reference-cpu-pytorch-default_config/: README.md  summary.html
open/GATEOverflow/results/intel_spr_32c-reference-gpu-pytorch-cu126/: README.md  summary.html
open/GATEOverflow/results/intel_spr_i9-reference-cpu-onnxruntime-default_config/: README.md  summary.html
open/GATEOverflow/results/intel_spr_i9-reference-cpu-pytorch-default_config/: README.md  summary.html
open/GATEOverflow/systems/: intel_spr_32c-reference-cpu-onnxruntime-default_config.json  intel_spr_32c-reference-cpu-pytorch-default_config.json  intel_spr_32c-reference-gpu-pytorch-cu126.json  intel_spr_i9-reference-cpu-onnxruntime-default_config.json  intel_spr_i9-reference-cpu-pytorch-default_config.json
top_results/: index.html
top_results/javascripts/: config.js
(+125 files in other folders)
