[project]
name = "mlperf-automotive"
version = "0.1.0"
description = ""
authors = [
    {name = "MLPerf-Automotive"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "absl-py (==2.2.2)",
    "onnx (>=1.17.0)",
    "onnx-graphsurgeon (==0.5.8)",
    "onnxruntime (==1.22.0)",
    "onnxsim (==0.4.36)",
    "onnxconverter-common (==1.15.0)",
    "typeguard (==4.4.2)",
    "nvtx (==0.2.11)",
    "cuda-python (==12.8.0)",
    "setuptools (==80.8.0)",
    "wheel (==0.45.1)",
    "virtualenv (==20.31.2)",
    "polygraphy (==0.49.22)",
    "pynvml (==12.0.0)",
    "torchsnapshot (==0.1.0)",
    "torchmetrics (==1.7.1)",
    "iopath (==0.1.10)",
    "pyre-extensions (==0.0.32)",
    "pillow (==11.1.0)",
    "opencv-python (==4.11.0.86)",
    "pyquaternion (==0.9.9)",
    "nuscenes-devkit (==1.1.9)",
    "transformers (==4.53.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
